--- a/datavis2_style.css
+++ b/datavis2_style.css
@@ -15,7 +15,7 @@
 
 #vis1_text {
     display: flex;
-    width: 45%;
+    width: 15%;
     padding-right: 5%;
 }
 
@@ -24,10 +24,10 @@
 }
 
 #vis1 {
-    width: 50%;
+    width: 80%;
 }
 #vis2_text {
-    width: 45%;
+    width: 15%;
     padding-right: 5%;
 }
 
@@ -36,18 +36,18 @@
 }
 
 #vis2 {
-    width: 50%;
-    height:350px;
+    width: 80%;
+    height:600px;
     /* padding-left: 10px;
     padding-right: 10px; */
 }
 
 #vis3 {
-    width: 30%;
+    width: 80%;
 }
 
 #vis3_text {
-    width: 45%;
+    width: 15%;
     padding-right: 5%;
 }
 
@@ -57,4 +57,15 @@
 
 #references {
     color: rgb(110, 110, 110)
+}
+
+.para {
+    font-family: sans-serif;
+    line-height: 2;
+    text-align: justify;
+}
+
+#pageTitle {
+    font-size: 2.5em;
+    font-family: serif;
 }
